--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,15 @@ pytest:
   only:
   - branches
   image: 641143039263.dkr.ecr.eu-west-3.amazonaws.com/runner/ci-datalake-ftp:220301
+  variables:
+    CLAMAV_NO_CLAMD: no
+    CLAMAV_NO_FRESHCLAMD: yes
+    CLAMAV_NO_MILTERD: yes
+
+  services:
+    - alias: clamav
+      name: clamav/clamav:0.104.0
+
   before_script:
   - poetry install --quiet
   script:
