--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,9 @@ pytest:
   - branches
   image: 641143039263.dkr.ecr.eu-west-3.amazonaws.com/runner/ci-datalake-ftp:220301
   variables:
-    CLAMAV_NO_CLAMD: no
-    CLAMAV_NO_FRESHCLAMD: yes
-    CLAMAV_NO_MILTERD: yes
+    CLAMAV_NO_CLAMD: "false"
+    CLAMAV_NO_FRESHCLAMD: "true"
+    CLAMAV_NO_MILTERD: "true"
 
   services:
     - alias: clamav
